# Tamerlane-Chess-Engine

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.tsbuildinfo
engine/: Cargo.toml
engine/src/: attack.rs  board.rs  eval.rs  lib.rs  main.rs  movegen.rs  ordering.rs  search.rs  server.rs  tt.rs  types.rs  uci.rs
src/: App.tsx  index.css
src/components/: Game.tsx  Square.tsx
src/core/: Attack.ts  GameLogic.ts  TamerlaneEngine.ts  engine-worker.ts  types.ts
src/engine-wasm/: package.json  tamerlane_engine.d.ts  tamerlane_engine.js  tamerlane_engine_bg.wasm  tamerlane_engine_bg.wasm.d.ts
