[package]
name = "tamerlane-engine"
version = "1.0.0"
edition = "2021"

[lib]
name = "tamerlane_engine"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "test_engine"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
